--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h1 class="azul">Portfólio</h1>
                 <nav>
                     <a href="#">Início</a>
-                    <a href="pag02.html">Sobre</a>
+                    <a href="#sobre">Sobre</a>
                     <a href="#">Serviços</a>
                     <a href="#">Portfólio</a>
                     <a href="#">Contato</a>
@@ -32,15 +32,30 @@
                 <a href="https://github.com/joao-epdro" class="icon" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.instagram.com/joao.antosz?utm_source=qr&igsh=cndpMmtid2lvYnUy" class="icon" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             </div>
-            <form action="pag02.html" target="_blank">
+            <form action="sobre" target="_blank">
                 <input type="submit" id="enviar" value="saber mais">
             </form>
         </section>
-        <section id="sobre">
+        <section id="resumo">
             <div class="resumo-eu">
                 <h1>Sobre <span class="azul">Mim</span></h1>
                 <p class="negrito">Oi, estou aqui para te ajudar no seu proximo projeto!</p>
                 <p class="lorem2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex iusto explicabo incidunt debitis non repudiandae, odio, ducimus fuga nemo id quibusdam tenetur aspernatur? Sint explicabo consectetur ipsam unde, porro tenetur!</p>
+            </div>
+        </section>
+        <h1 class="servicos">Meus <span class="azul">Serviços</span></h1>
+        <section id="experiencia-profissional">
+            <div class="caixa1">
+                <h1>Desenvolvedor Web</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure ipsa quae magnam culpa quam, ea natus porro eius tempore beatae nesciunt. Voluptatum voluptatem recusandae excepturi architecto qui quis, cumque tempora.</p>
+            </div>
+            <div class="caixa2">
+                <h1>Design de interface</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero repellendus eos nobis nisi necessitatibus, nemo explicabo esse impedit id dolores soluta aspernatur nesciunt, dolor consequatur labore dolorem, eius voluptatum molestiae!</p>
+            </div>
+            <div class="caixa3">
+                <h1>Websites Responsivos</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio corporis placeat ab amet corrupti atque vel vitae, perspiciatis sit ea, possimus inventore quos temporibus iure odio earum est. Ex, repellat.</p>
             </div>
         </section>
     </main>
