--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
                 <h1>Websites Responsivos</h1>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio corporis placeat ab amet corrupti atque vel vitae, perspiciatis sit ea, possimus inventore quos temporibus iure odio earum est. Ex, repellat.</p>
             </div>
+            <h1 id="contato">Fale <span class="azul">Comigo</span></h1>
+            <form action="#">
+                <label for="email">Email:</label><input type="email" id="email" name="email" placeholder="Exemplo: email@login.com">
+                <input type="submit" id="enviar2" name="enviar">
+            </form>
         </section>
     </main>
 </body>
