--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             </header>
             <p class="ola">Olá, eu sou</p>
             <p class="joao">Joao Pedro</p>
-            <p class="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus autem fugit architecto molestias magnam placeat impedit iste incidunt neque, eum ducimus maxime vero iusto id recusandae quisquam perspiciatis atque. Quibusdam!</p>
+            <p class="lorem">
+                Olá, sou um estudante de programação com foco em HTML5 e CSS3
+            </p>
             <div class="icones-sociais">
                 <a href="https://www.linkedin.com/in/jo%C3%A3o-pedro-ferreira-a25323376/" class="icon" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="https://wa.me/qr/W6CPCFJ6XUP4K1" class="icon" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
@@ -40,10 +42,12 @@
             <div class="resumo-eu">
                 <h1>Sobre <span class="azul">Mim</span></h1>
                 <p class="negrito">Oi, estou aqui para te ajudar no seu proximo projeto!</p>
-                <p class="lorem2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex iusto explicabo incidunt debitis non repudiandae, odio, ducimus fuga nemo id quibusdam tenetur aspernatur? Sint explicabo consectetur ipsam unde, porro tenetur!</p>
+                <p class="lorem2">
+                    Sou um desenvolvedor web iniciante, crio sites responsivos e estou sempre procurando desenvolver projetos práticos, tenho interesse em evoluir na área de desenvolvimento web
+                </p>
             </div>
         </section>
-        <h1 class="servicos">Meus <span class="azul">Serviços</span></h1>
+        <h1 class="servicos">Minhas <span class="azul">Habilidades</span></h1>
         <section id="experiencia-profissional">
             <div id="container">
                 <div class="caixa1">
