Coloquei o link pro git hub no botao saber mais

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <a href="https://github.com/joao-epdro" class="icon" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.instagram.com/joao.antosz?utm_source=qr&igsh=cndpMmtid2lvYnUy" class="icon" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             </div>
-            <form action="#sobre" target="_blank">
+            <form action="https://joao-epdro.github.io/Portfolio/" target="_blank">
                 <input type="submit" id="enviar" value="saber mais">
             </form>
         </section>
