--- a/index.html
+++ b/index.html
@@ -34,14 +34,13 @@
                 <a href="https://github.com/joao-epdro" class="icon" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.instagram.com/joao.antosz?utm_source=qr&igsh=cndpMmtid2lvYnUy" class="icon" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             </div>
-            <form action="https://joao-epdro.github.io/Portfolio/" target="_blank">
+            <form action="https://github.com/joao-epdro" target="_blank">
                 <input type="submit" id="enviar" value="saber mais">
             </form>
         </section>
         <section id="resumo">
             <div class="resumo-eu">
                 <h1>Sobre <span class="azul">Mim</span></h1>
-                <p class="negrito">Oi, estou aqui para te ajudar no seu proximo projeto!</p>
                 <p class="lorem2">
                     Sou um desenvolvedor web iniciante, crio sites responsivos e estou sempre procurando desenvolver projetos práticos, tenho interesse em evoluir na área de desenvolvimento web
                 </p>
@@ -51,16 +50,18 @@
         <section id="experiencia-profissional">
             <div id="container">
                 <div class="caixa1">
-                    <h1>Desenvolvedor Web</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure ipsa quae magnam culpa quam, ea natus porro eius tempore beatae nesciunt. Voluptatum voluptatem recusandae excepturi architecto qui quis, cumque tempora.</p>
+                    <h1>Informatica e Organização</h1>
+                    <p>
+                        Boa familiaridade com <strong>computador</strong>, navegaçao na internet, ferramentas digitais com atençao em <strong>Organização</strong>
+                    </p>
                 </div>
                 <div class="caixa2">
-                    <h1>Design de interface</h1>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero repellendus eos nobis nisi necessitatibus, nemo explicabo esse impedit id dolores soluta aspernatur nesciunt, dolor consequatur labore dolorem, eius voluptatum molestiae!</p>
+                    <h1>Aprendizado Rápido</h1>
+                    <p>Facilidade em <strong>aprender</strong> ferramentas novas, e evoluir continuamente com projetos práticos</p>
                 </div>
                 <div class="caixa3">
-                    <h1>Websites Responsivos</h1>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Distinctio corporis placeat ab amet corrupti atque vel vitae, perspiciatis sit ea, possimus inventore quos temporibus iure odio earum est. Ex, repellat.</p>
+                    <h1>Desenvolvimento Front-end</h1>
+                    <p><abbr title="Hyper Text Markup Language">HTML</abbr> e <abbr title="Cascading Style Sheets">CSS</abbr> para criaçao de páginas simples e <strong>responsivas</strong></p>
                 </div>
             </div>
             <h1 id="contato">Fale <span class="azul">Comigo</span></h1>
