Atualizaçao, projetos e nav

--- a/index.html
+++ b/index.html
@@ -15,11 +15,9 @@
             <header>
                 <h1 class="azul">Portfólio</h1>
                 <nav>
-                    <a href="#">Início</a>
                     <a href="#sobre">Sobre</a>
-                    <a href="#">Serviços</a>
-                    <a href="#">Portfólio</a>
                     <a href="#">Contato</a>
+                    <a href="#" class="fixo">Início</a>
                 </nav>
             </header>
             <p class="ola">Olá, eu sou</p>
@@ -46,8 +44,22 @@
                 </p>
             </div>
         </section>
-        <h1 class="servicos">Minhas <span class="azul">Habilidades</span></h1>
         <section id="experiencia-profissional">
+            <h1 class="azul">Projetos</h1>
+            <p class="resumo-projetos">Aqui você encotra todos os projetos no qual participei, seja pessoal ou em equipe.</p>
+            <div class="container-projetos">
+                <div class="projetos"><a href=""><img src="imagens/foto-projeto-cinema.png" alt=""></a></div>
+                <div class="projetos"><a href=""><img src="" alt=""></a></div>
+                <div class="projetos"><a href=""><img src="" alt=""></a></div>
+                <div class="tag-1">
+                    <h1>Cinema</h1>
+                    <p>Projeto desenvolvido em equipe feito para simular páginas de cinema</p>
+                    <div>
+                        
+                    </div>
+                </div>
+            </div>
+            <h1 class="servicos">Minhas <span class="azul">Habilidades</span></h1>
             <div id="container">
                 <div class="caixa1">
                     <h1>Informatica e Organização</h1>
