Atualizaçao font awesome

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-…" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
+    <script src="https://kit.fontawesome.com/fdc3aec534.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <main>
