--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <div class="icones-sociais">
                 <a href="https://www.linkedin.com/in/jo%C3%A3o-pedro-ferreira-a25323376/" class="icon" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
                 <a href="https://wa.me/qr/W6CPCFJ6XUP4K1" class="icon" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-                <a href="mailto:joaosjpf@gmail.com?subject=Oi&body=Olá, quero falar com você!" class="icon"><i class="fa-brands fa-google"></i></a>
+                <a href="joaosjpf@gmail.com?" class="icon"><i class="fa-brands fa-google"></i></a>
                 <a href="https://github.com/joao-epdro" class="icon" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.instagram.com/joao.antosz?utm_source=qr&igsh=cndpMmtid2lvYnUy" class="icon" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             </div>
@@ -47,13 +47,13 @@
             <h1 class="azul">Projetos</h1>
             <p class="resumo-projetos">Aqui você encotra todos os projetos no qual participei, seja pessoal ou em equipe.</p>
             <div class="container-projetos">
-                <div class="projetos"><a href=""><img src="imagens/foto-projeto-cinema.png" alt=""></a></div>
-                <div class="projetos"><a href=""><img src="" alt=""></a></div>
-                <div class="projetos"><a href=""><img src="" alt=""></a></div>
-                <div class="tag-1">
+                <div class="projetos"><a href="#"><img src="imagens/foto-projeto-cinema.png" alt=""></a></div>
+                <div class="projetos"><a href="#"><img src="" alt=""></a></div>
+                <div class="projetos"><a href="#"><img src="" alt=""></a></div>
+                <div class="projeto-1">
                     <h1>Cinema</h1>
                     <p>Projeto desenvolvido em equipe feito para simular páginas de cinema</p>
-                    <div>
+                    <div class="tag-1">
                         
                     </div>
                 </div>
