Subindo tag pro Google

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap">
     <script src="https://kit.fontawesome.com/fdc3aec534.js" crossorigin="anonymous"></script>
+    <meta name="google-site-verification" content="SWG2igppwE7ieTSwjCLjHw_gBpIF3nzjjDsPGE7VlY4" />
 </head>
 <body>
     <main>
