Melhorando Layout e responsividade

--- a/index.html
+++ b/index.html
@@ -48,14 +48,39 @@
             <h1 class="azul">Projetos</h1>
             <p class="resumo-projetos">Aqui você encotra todos os projetos no qual participei, seja pessoal ou em equipe.</p>
             <div class="container-projetos">
-                <div class="projetos"><a href="#"><img src="imagens/foto-projeto-cinema.png" alt=""></a></div>
-                <div class="projetos"><a href="#"><img src="" alt=""></a></div>
-                <div class="projetos"><a href="#"><img src="" alt=""></a></div>
-                <div class="projeto-1">
-                    <h1>Cinema</h1>
-                    <p>Projeto desenvolvido em equipe feito para simular páginas de cinema</p>
-                    <div class="tag-1">
-                        
+                <div class="agrupar">
+                    <div class="projetos">
+                        <a href="#"><img src="imagens/foto-projeto-cinema.png" alt="foto-projeto-1"></a>
+                    </div>
+                    <div class="descricao">
+                            <h1>Cinema</h1>
+                            <p>Site para estudos feito em equipe. Ele simula páginas de um cinema</p>
+                            <div class="tecnologias">
+                                <div class="tech-1">
+                                    <p>HTML</p>
+                                </div>
+                                <div class="tech-2">
+                                    <p>CSS</p>
+                                </div>
+                            </div>
+                    </div>
+                </div>
+                <div class="agrupar">
+                    <div class="projetos">
+                        <a href="#"><img src="" alt="foto-projeto-2"></a>
+                    </div>
+                    <div class="descricao">
+                        <h1>Teste</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe architecto natus velit ab, placeat molestiae ullam? Sunt veritatis fuga voluptatibus nostrum qui, autem quos cumque vero, consectetur officiis veniam sapiente.</p>
+                    </div>
+                </div>
+                <div class="agrupar">
+                    <div class="projetos">
+                        <a href="#"><img src="" alt="foto-projeto-3"></a>
+                    </div>
+                    <div class="descricao">
+                        <h1>Teste</h1>
+                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet debitis numquam ea repudiandae culpa assumenda nulla! Possimus omnis incidunt, laboriosam illum sint corrupti aliquid, et beatae, recusandae amet porro reiciendis.</p>
                     </div>
                 </div>
             </div>
@@ -76,8 +101,8 @@
                     <p><abbr title="Hyper Text Markup Language">HTML</abbr> e <abbr title="Cascading Style Sheets">CSS</abbr> para criaçao de páginas simples e <strong>responsivas</strong></p>
                 </div>
             </div>
-            <h1 id="contato">Fale <span class="azul">Comigo</span></h1>
             <!--
+            <h1 id="contato">Fale <span class="azul">Comigo</span></h1>
                 <form action="#">
                     <label for="email">Email:</label><input type="email" id="email" name="email" placeholder="Exemplo: email@login.com">
                     
