--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                     <a href="#sobre">Sobre</a>
                     <a href="#">Contato</a>
                     <a href="#" class="fixo">Início</a>
+                    <i class="fa-solid fa-bars"></i>
                 </nav>
             </header>
             <p class="ola">Olá, eu sou</p>
@@ -50,7 +51,7 @@
             <div class="container-projetos">
                 <div class="agrupar">
                     <div class="projetos">
-                        <a href="#"><img src="imagens/foto-projeto-cinema.png" alt="foto-projeto-1"></a>
+                        <a href="https://leticia-feldhaus.github.io/Projetos/" target="_blank"><img src="imagens/foto-projeto-cinema.png" alt="foto-projeto-1"></a>
                     </div>
                     <div class="descricao">
                             <h1>Cinema</h1>
