--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <header>
                 <h1 class="azul">Portfólio</h1>
                 <nav>
-                    <a href="#sobre">Sobre</a>
-                    <a href="#">Contato</a>
+                    <a href="#lorem2">Sobre</a>
+                    <a href="#icones-sociais">Contato</a>
                     <a href="#" class="fixo">Início</a>
                     <i class="fa-solid fa-bars"></i>
                 </nav>
@@ -26,21 +26,21 @@
             <p class="lorem">
                 Olá, sou um estudante de programação com foco em HTML5 e CSS3
             </p>
-            <div class="icones-sociais">
+            <div id="icones-sociais">
                 <a href="https://www.linkedin.com/in/jo%C3%A3o-pedro-ferreira-a25323376/" class="icon" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-                <a href="https://wa.me/qr/W6CPCFJ6XUP4K1" class="icon" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-                <a href="joaosjpf@gmail.com?" class="icon"><i class="fa-brands fa-google"></i></a>
+                <a href="https://wa.me/5519999418424" class="icon" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
+                <a href="https://mail.google.com/mail/?view=cm&to=joaosjpf@gmail.com" class="icon" target="_blank"><i class="fa-brands fa-google"></i></a>
                 <a href="https://github.com/joao-epdro" class="icon" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.instagram.com/joao.antosz?utm_source=qr&igsh=cndpMmtid2lvYnUy" class="icon" target="_blank"><i class="fa-brands fa-instagram"></i></a>
             </div>
-            <form action="https://github.com/joao-epdro" target="_blank">
+            <form action="#container">
                 <input type="submit" id="enviar" value="saber mais">
             </form>
         </section>
         <section id="resumo">
             <div class="resumo-eu">
                 <h1>Sobre <span class="azul">Mim</span></h1>
-                <p class="lorem2">
+                <p id="lorem2">
                     Sou um desenvolvedor web iniciante, crio sites responsivos e estou sempre procurando desenvolver projetos práticos, tenho interesse em evoluir na área de desenvolvimento web
                 </p>
             </div>
@@ -55,7 +55,7 @@
                     </div>
                     <div class="descricao">
                             <h1>Cinema</h1>
-                            <p>Site para estudos feito em equipe. Ele simula páginas de um cinema</p>
+                            <p>Site para estudos feito em equipe. Ele simula páginas de um cinema, CSS totalmente feito por mim</p>
                             <div class="tecnologias">
                                 <div class="tech-1">
                                     <p>HTML</p>
