--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                         <a href="https://leticia-feldhaus.github.io/Projetos/" target="_blank"><img src="imagens/foto-projeto-cinema.png" alt="foto-projeto-1"></a>
                     </div>
                     <div class="descricao">
-                            <h1>Cinema</h1>
-                            <p>Site para estudos feito em equipe. Ele simula páginas de um cinema, CSS totalmente feito por mim</p>
+                            <h1>Cinema - Projeto fictício</h1>
+                            <p>Site fictício para estudos feito em equipe. Ele simula páginas de um cinema, CSS totalmente desenvolvido por mim</p>
                             <div class="tecnologias">
                                 <div class="tech-1">
                                     <p>HTML</p>
