--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div class="resumo-eu">
                 <h1>Sobre <span class="azul">Mim</span></h1>
                 <p id="lorem2">
-                    Sou um desenvolvedor web iniciante, crio sites responsivos e estou sempre procurando desenvolver projetos práticos, tenho interesse em evoluir na área de desenvolvimento web
+                    Sou um desenvolvedor web iniciante, crio sites responsivos e estou sempre procurando desenvolver projetos práticos, tenho interesse em evoluir na área de desenvolvimento web. Estou em busca da minha primeira oportunidade como menor aprendiz
                 </p>
             </div>
         </section>
@@ -68,12 +68,20 @@
                 </div>
                 <div class="agrupar">
                     <div class="projetos">
-                        <a href="#"><img src="" alt="foto-projeto-2"></a>
+                        <a href="https://joao-epdro.github.io/cine-plus/" target="_blank"><img src="imagens/foto-projeto-cine-plus.png" alt="foto-projeto-2"></a>
                     </div>
                     <div class="descricao">
-                        <h1>Teste</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe architecto natus velit ab, placeat molestiae ullam? Sunt veritatis fuga voluptatibus nostrum qui, autem quos cumque vero, consectetur officiis veniam sapiente.</p>
+                        <h1>Login</h1>
+                        <p>Projeto interface de login feito com foco em simplicidade. Ele pussui boa responsividade e funciona em todos os dispositivos.</p>
                     </div>
+                    <div class="tecnologias-2">
+                            <div class="tech-1">
+                                <p>HTML</p>
+                            </div>
+                            <div class="tech-2">
+                                <p>CSS</p>
+                            </div>
+                        </div>
                 </div>
                 <div class="agrupar">
                     <div class="projetos">
