--- a/index.html
+++ b/index.html
@@ -75,21 +75,31 @@
                         <p>Projeto interface de login feito com foco em simplicidade. Ele pussui boa responsividade e funciona em todos os dispositivos.</p>
                     </div>
                     <div class="tecnologias-2">
-                            <div class="tech-1">
-                                <p>HTML</p>
-                            </div>
-                            <div class="tech-2">
-                                <p>CSS</p>
-                            </div>
+                        <div class="tech-1">
+                            <p>HTML</p>
                         </div>
+                        <div class="tech-2">
+                            <p>CSS</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="agrupar">
                     <div class="projetos">
-                        <a href="#"><img src="" alt="foto-projeto-3"></a>
+                        <a href="https://joao-epdro.github.io/construcao/" target="_blank"><img src="imagens/construcao.png" alt="foto-projeto-3"></a>
                     </div>
                     <div class="descricao">
-                        <h1>Teste</h1>
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet debitis numquam ea repudiandae culpa assumenda nulla! Possimus omnis incidunt, laboriosam illum sint corrupti aliquid, et beatae, recusandae amet porro reiciendis.</p>
+                        <h1>Site em construçao</h1>
+                        <p>
+                            Um layout simples e direto para ser usado como página temporária durante o desenvolvimento de um site, podendo ser adaptado para diferentes projetos ou portfólios.
+                        </p>
+                    <div class="tecnologias-3">
+                        <div class="tech-1">
+                            <p>HTML</p>
+                        </div>
+                        <div class="tech-2">
+                            <p>CSS</p>
+                        </div>
+                    </div>
                     </div>
                 </div>
             </div>
